// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> renders default 1`] = `
.c0 {
  min-width: 50%;
  padding: 0.5rem;
  background: #fafafa;
  border: solid #767676;
  border-width: 0 0 0.15rem 0;
  font-size: 1.2rem;
  color: #000;
}

.c0:focus {
  border: solid #000;
  border-width: 0 0 0.15rem 0;
}

<Input__TextInput
  theme={
    Object {
      "bg": "#fafafa",
      "bgAdd": "#fff",
      "color": "#000",
      "colorAdd": "#767676",
      "shadow": "0px 3px 5px 1px rgba(217,217,217,0.82)",
    }
  }
>
  <input
    className="c0"
  />
</Input__TextInput>
`;

exports[`<TextInput /> renders with theme 1`] = `
.c0 {
  min-width: 50%;
  padding: 0.5rem;
  background: #000;
  border: solid #8d8d8d;
  border-width: 0 0 0.15rem 0;
  font-size: 1.2rem;
  color: #fff;
}

.c0:focus {
  border: solid #fff;
  border-width: 0 0 0.15rem 0;
}

<Input__TextInput
  theme={
    Object {
      "bg": "#000",
      "bgAdd": "#202124",
      "color": "#fff",
      "colorAdd": "#8d8d8d",
      "shadow": "none",
    }
  }
>
  <input
    className="c0"
  />
</Input__TextInput>
`;

exports[`renders default <InputRadio /> 1`] = `
.c0 {
  opacity: 0;
}

<input
  className="c0"
/>
`;
